--- a/css/styles.css
+++ b/css/styles.css
@@ -1,253 +1,3 @@
-/*Primer imagen y texto*/
-.home {
-	display: inline-block;
-	margin-left: 100px;
+.bottomnav {
+	margin-bottom: 70px;
 }
-
-/*alinea los cuadros*/
-.search {
-	display: inline-block;
-	margin: auto;
-    text-align: center;
-}
-/*Alinea el primer cuadro*/
-.search .hello {
-	margin-left: 100px;
-}
-/*Alinea el segundo cuadro*/
-.search .inventory {
-	margin-left: 10px;
-}
-
-/*Alinea los cuadros de la segunda linea*/
-.portfolio {
-	display: inline-block;
-	margin: auto;
-    text-align: center;
-}
-/*Alinea el primer cuadro de la segunda linea*/
-.portfolio .port {
-	margin-left:100px;
-}
-/*Alinea el segundo cuadro de la segunda linea*/
-.portfolio .battleship {
-	margin-left: 10px;	
-}
-
-/*alinea la tercera fila de cuadros*/
-.more {
-	display: inline-block;
-	margin: auto;
-    text-align: center;
-}
-/*Alinea el primer cuadro fila 3*/
-.more .engine {
-	margin-left: 100px;
-}
-/*Alinea el segundo cuadro fila 3*/
-.more .send {
-	margin-left: 10px;
-}
-
-/*alinea la cuarta fila de cuadros*/
-.last {
-	display: inline-block;
-	margin: auto;
-    text-align: center;
-}
-/*Alinea el primer cuadro fila 4*/
-.last .guess {
-	margin-left: 100px;
-}
-/*Alinea el segundo cuadro fila 4*/
-.last .cash {
-	margin-left: 10px;
-}
-
-
-/*Despliega la linea*/
-.linea {
-    border: 1px solid #D8D8D8;
-    background-color: #D8D8D8;
-	margin: 10px 385px 5px 100px;
-    }
-
-.linea2 {
-    border: 1px solid #2E2E2E;
-    background-color: #2E2E2E;
-	margin: 10px 155px 5px 100px;
-	border-radius: 5px;
-	
-    }
-
-.linea2 img {
-		margin-left: 900px;
-}
-
-
-.home img {
-	margin-left:10px;
-}
-
-/*alinea el texto de arriba*/
-.home p { 
-	font-family: Cursive;
-	font-weight: bold;
-	color: black;
-	margin-right: 210px;
-	margin-left: 220px;
-	margin-bottom: 10px;	
-}
-
-/*Valor de tamaño al primer parrafo*/
-.home p:first-child{
-	font-size: 35px;
-}
-
-/*Valor de tamaño al segundo parrafo*/
-.home p:nth-child(2) {
-	font-size: 15px;
-	margin-right:25px;
-}
-
-/*Decoracion ninguna y color azul a los links*/
-a {
-	text-decoration: none;
-	font-size: 50px;
-	color: white
-}
-
-/*Parrafos color negro y en negrita*/
-p {
-	color:black;
-	font-weight: bold;
-	margin-left: 50px;
-	margin-right: 10px;
-}
-
-
-/*Featured*/
-.featured p {
-	margin-left: 100px;
-	font-size: 20px;
-	font-family: Cursive;
-	font-weight: bold;
-	color: #585858;
-}
-
-.inventory {
-    height: 305px;
-    width: 500px;
-    background-color: #8904B1;
-    border-radius: 5px;
-    }
-
-.inventory a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;
-	
-}
-
-.hello {
-    height: 305px;
-    width: 500px;
-    background-color: #58ACFA;
-    border-radius: 5px;
-    }
-
-.hello {
-	color: white;
-	text-decoration: none;
-	line-height: 100px;	
-}
-
-span {
-	font-size: 30px;
-	color: white;
-}
-
-.port {
-    height: 305px;
-    width: 500px;
-    background-color: #B40431;
-    border-radius: 5px;
-    }
-
-.port a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;
-}
-
-.battleship {
-    height: 305px;
-    width: 500px;
-    background-color: #D0FA58;
-    border-radius: 5px;
-    }
-
-.battleship a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;	
-	}
-
-.engine {
-    height: 305px;
-    width: 500px;
-    background-color: #FF4000;
-    border-radius: 5px;
-    }
-
-.engine a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;	
-	}
-
-.send {
-    height: 305px;
-    width: 500px;
-    background-color: #848484;
-    border-radius: 5px;
-    }
-
-.send a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;	
-	}
-
-.guess {
-    height: 305px;
-    width: 500px;
-    background-color: #FF8000;
-    border-radius: 5px;
-    }
-
-.guess a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;	
-	}
-
-.cash {
-    height: 305px;
-    width: 500px;
-    background-color: #0489B1;
-    border-radius: 5px;
-    }
-
-.cash a {
-	color: white;
-	text-decoration: none;
-	line-height: 300px;	
-	}
-
-form {
-    font-size: 20px;
-    font-family: Cursive;
-	margin-bottom: 400px;
-}
-
